# gtk_applications

./: .gitignore
b1/basic_compile/method1/: start.c
b1/makefile-usage/: startGtkApp.c
b1/window1/gtk_box/: startGtkApp.c
b1/window1/widgets_button/: startGtkApp.c
b2/: Makefile  example-0.c
b2/docs/: README.md
b3/a1/: main.c  meson.build
b3/t1/: main.c
b3/t10/: main.c  meson.build
b3/t11/: app.gresource.xml  main.c  meson.build
b3/t2/: main.c
b3/t3/: Makefile  main.c
b3/t4/: main.c
b3/t5/: main.c
b3/t6/: main.c
b3/t7/: main.c
b3/t8/: main.c
basics1/basic_compile/method2/: la1.txt
basics1/window1/gtk_fixed/: startGtkApp.c
basics1/window1/method1/: startGtkApp.c
basics1/window1/method2/: startGtkApp.c
basics1/window1/properties/: startGtkApp.c
